adicionado mais informações no envio de email
